my-app-Ingress/nginx-basic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx-deployment
spec:
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
      - name: app-nginx
        image: stacksimplify/kube-nginxapp1:1.0.0
        ports:
        - containerPort: 80
