my-app-Ingress/nginx-basic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service-clusterip-service
spec:
  selector:
    app: app-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
