my-app-Ingress/my-app-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: app-service-clusterip-service
             port:
               number: 80
